fix button not showing

--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -33,6 +33,7 @@
         opacity: 0;
         position: relative;
         left: -200px;
+        visibility: hidden;
 
         &:hover {
             background-color: red;
